After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727337 - Wayland: Arange displays makes wrong "height"
Wayland: Arange displays makes wrong "height"
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Mac OS
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-03-30 10:42 UTC by Carlos Soriano
Modified: 2015-03-02 15:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix pointer constraining (1.84 KB, patch)
2015-03-02 12:49 UTC, Marek Chalupa
none Details | Review
Fix pointer constraining (1.95 KB, patch)
2015-03-02 14:25 UTC, Marek Chalupa
committed Details | Review

Description Carlos Soriano 2014-03-30 10:42:15 UTC
This is the case:
built-in monitor = 1366x768 Secondary
external monitor = 1920x1080 Primary

Displays initial arrangement:
http://imgur.com/JOix4EX,xpbnIJ9
and I changed to:
http://imgur.com/JOix4EX,xpbnIJ9#1

Now, the secondary monitor feels like streched, like if the bottom edge remains where it was, and the top one moved fine.

The thing is that, 
Main.layoutManager.monitors[1].heigth is fine, 768px.
Comment 1 Marek Chalupa 2015-03-02 11:48:53 UTC
I can confirm this bug in current master. When arranged laptop (primary) display to have the top edge lower than the other display, the pointer on the laptop (smaller) display is constrained from moving to the very bottom. The lower I arrange the laptop display, the higher the constraint is.
Comment 2 Marek Chalupa 2015-03-02 12:49:42 UTC
Created attachment 298280 [details] [review]
Fix pointer constraining
Comment 3 Rui Matos 2015-03-02 13:03:00 UTC
Review of attachment 298280 [details] [review]:

Good catch

::: src/backends/native/meta-backend-native.c
@@ +119,3 @@
   ClutterPoint current;
   unsigned int i;
+  float nx, ny;

Not your fault, but since we're touching these variables: please change them to cx/cy . nx/ny sound like "new x/y" which isn't what they're used for here, they're "current x/y".
Comment 4 Marek Chalupa 2015-03-02 14:25:33 UTC
Created attachment 298303 [details] [review]
Fix pointer constraining

renamed nx/ny to cx/cy
Comment 5 Rui Matos 2015-03-02 15:10:18 UTC
Pushed, thanks